[gd_scene load_steps=2 format=3 uid="uid://bqxcscoj17r11"]

[ext_resource type="Script" uid="uid://casir2n8pqoqn" path="res://gui/save_menu.gd" id="1_hdwbn"]

[node name="SaveMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hdwbn")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0768358, 0.0768358, 0.0768358, 1)

[node name="Control" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -500.0
offset_top = -200.0
offset_right = 500.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="Slot1" type="Panel" parent="Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -500.0
offset_right = 500.0
offset_bottom = 100.0
grow_horizontal = 2

[node name="SaveButton1" type="Button" parent="Control/Slot1"]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -217.0
grow_horizontal = 0
grow_vertical = 2
text = "Save Game
"

[node name="LoadButton1" type="Button" parent="Control/Slot1"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -48.0
offset_right = 271.0
grow_horizontal = 2
grow_vertical = 2
text = "Load Game
"

[node name="1" type="Label" parent="Control/Slot1"]
layout_mode = 1
offset_left = 13.0
offset_top = 14.0
offset_right = 27.0
offset_bottom = 37.0
text = "1."

[node name="Slot2" type="Panel" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -500.0
offset_top = -50.0
offset_right = 500.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2

[node name="SaveButton2" type="Button" parent="Control/Slot2"]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -216.0
grow_horizontal = 0
grow_vertical = 2
text = "Save Game
"

[node name="LoadButton2" type="Button" parent="Control/Slot2"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -48.0
offset_right = 272.0
grow_horizontal = 2
grow_vertical = 2
text = "Load Game
"

[node name="2" type="Label" parent="Control/Slot2"]
layout_mode = 1
offset_left = 14.0
offset_top = 14.0
offset_right = 28.0
offset_bottom = 37.0
text = "2."

[node name="Slot3" type="Panel" parent="Control"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -500.0
offset_top = -100.0
offset_right = 500.0
grow_horizontal = 2
grow_vertical = 0

[node name="SaveButton3" type="Button" parent="Control/Slot3"]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -214.0
grow_horizontal = 0
grow_vertical = 2
text = "Save Game
"

[node name="LoadButton3" type="Button" parent="Control/Slot3"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -48.0
offset_right = 275.0
grow_horizontal = 2
grow_vertical = 2
text = "Load Game
"

[node name="3" type="Label" parent="Control/Slot3"]
layout_mode = 1
offset_left = 17.0
offset_top = 15.0
offset_right = 31.0
offset_bottom = 38.0
text = "3."

[node name="ReturnButton" type="Button" parent="."]
layout_mode = 1
offset_right = 143.0
offset_bottom = 65.0
text = "back
"

[connection signal="pressed" from="Control/Slot1/SaveButton1" to="." method="_on_save_button_1_pressed"]
[connection signal="pressed" from="Control/Slot1/LoadButton1" to="." method="_on_load_button_1_pressed"]
[connection signal="pressed" from="Control/Slot2/SaveButton2" to="." method="_on_save_button_2_pressed"]
[connection signal="pressed" from="Control/Slot2/LoadButton2" to="." method="_on_load_button_2_pressed"]
[connection signal="pressed" from="Control/Slot3/SaveButton3" to="." method="_on_save_button_3_pressed"]
[connection signal="pressed" from="Control/Slot3/LoadButton3" to="." method="_on_load_button_3_pressed"]
[connection signal="pressed" from="ReturnButton" to="." method="_on_return_button_pressed"]
